--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "dependencies": {
     "bluebird": "^3.4.7",
-    "body-parser": "~1.15.2",
+    "body-parser": "~1.19.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "jade": "~1.11.0",
+    "debug": "~2.6.9",
+    "express": "~4.17.1",
+    "jade": "0.29",
     "lodash": "^4.17.4",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.5.0"
   }
 }
